update names partial

--- a/src/package.json
+++ b/src/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "edex-ui",
-  "productName": "eDEX-UI",
+  "name": "Lycan-ui",
+  "productName": "Lycan-UI",
   "version": "2.2.8",
-  "description": "eDEX-UI sci-fi interface",
+  "description": "Lycan-UI sci-fi interface",
   "keywords": [
     "desktop",
     "sci-fi",
