--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "edex-ui",
-  "productName": "eDEX-UI",
+  "name": "Lycan-ui",
+  "productName": "Lycan-UI",
   "version": "2.2.8",
   "description": "A science fiction desktop running everywhere. Awesome.",
   "keywords": [
@@ -32,17 +32,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GitSquared/edex-ui.git"
+    "url": "git+https://github.com/GitSquared/Lycan-ui.git"
   },
   "author": "Gabriel 'Squared' SAILLARD <gabriel@saillard.dev> (https://gaby.dev)",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/GitSquared/edex-ui/issues"
+    "url": "https://github.com/GitSquared/Lycan-ui/issues"
   },
-  "homepage": "https://github.com/GitSquared/edex-ui#readme",
+  "homepage": "https://github.com/GitSquared/Lycan-ui#readme",
   "build": {
-    "appId": "com.edex.ui",
-    "productName": "eDEX-UI",
+    "appId": "com.Lycan.ui",
+    "productName": "Lycan-UI",
     "publish": "github",
     "asar": true,
     "compression": "normal",
@@ -53,7 +53,7 @@
     },
     "forceCodeSigning": false,
     "npmRebuild": true,
-    "artifactName": "eDEX-UI-${os}-${arch}.${ext}",
+    "artifactName": "Lycan-UI-${os}-${arch}.${ext}",
     "linux": {
       "target": [
         "AppImage"
@@ -62,7 +62,7 @@
       "icon": "media/linuxIcons"
     },
     "appImage": {
-      "artifactName": "eDEX-UI-Linux-${arch}.AppImage"
+      "artifactName": "Lycan-UI-Linux-${arch}.AppImage"
     },
     "mac": {
       "target": [
@@ -77,7 +77,7 @@
       "icon": "media/icon.icns"
     },
     "dmg": {
-      "artifactName": "eDEX-UI-macOS-${arch}.dmg"
+      "artifactName": "Lycan-UI-macOS-${arch}.dmg"
     },
     "win": {
       "target": [
@@ -92,7 +92,7 @@
       "icon": "media/icon.ico"
     },
     "nsis": {
-      "artifactName": "eDEX-UI-Windows-${arch}.exe",
+      "artifactName": "Lycan-UI-Windows-${arch}.exe",
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
       "deleteAppDataOnUninstall": true
